force-app/main/default/objects/AccountingPiece__c/AccountingPiece__c.object-meta.xml
<CustomObject>
    <label>Pièce comptable</label>
    <nameField>
        <displayFormat>PIC/{YYYY}/{0000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pièces comptables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>