force-app/main/default/objects/AccountingPiece__c/fields/accountAddress__c.field-meta.xml
<CustomField>
    <fullName>accountAddress__c</fullName>
    <formula>TRIM(
  IF(ISBLANK(account__r.rue__c), &apos;&apos;, TRIM(account__r.rue__c) + BR()) + 
  TRIM(account__r.codePostal__c + &apos; &apos; + account__r.ville__c) +
  IF(ISBLANK(account__r.departement__c), &apos;&apos;, BR() + TRIM(account__r.departement__c)) + 
  IF(ISBLANK(account__r.pays__c), &apos;&apos;, BR() + TRIM(account__r.pays__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse</label>
    <type>Text</type>
</CustomField>