force-app/main/default/objects/AccountingPiece__c/fields/accountingDate__c.field-meta.xml
<CustomField>
    <fullName>accountingDate__c</fullName>
    <label>Date comptable</label>
    <type>Date</type>
</CustomField>