force-app/main/default/objects/AccountingPiece__c/fields/accountingEntry__c.field-meta.xml
<CustomField>
    <fullName>accountingEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecriture comptable</label>
    <referenceTo>AccountingEntry__c</referenceTo>
    <relationshipLabel>Pièces comptables</relationshipLabel>
    <relationshipName>AccountingPieces</relationshipName>
    <type>Lookup</type>
</CustomField>