force-app/main/default/objects/AccountingPiece__c/fields/advanceInvoiceCount__c.field-meta.xml
<CustomField>
    <fullName>advanceInvoiceCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>[#] Nb facture d&apos;acompte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>