force-app/main/default/objects/AccountingPiece__c/fields/bankRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>bankRemittanceDate__c</fullName>
    <label>Date remise en banque</label>
    <type>DateTime</type>
</CustomField>