force-app/main/default/objects/AccountingPiece__c/fields/bankRemittanceNumber__c.field-meta.xml
<CustomField>
    <fullName>bankRemittanceNumber__c</fullName>
    <label>N° remise en banque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>