force-app/main/default/objects/AccountingPiece__c/fields/cancelledAmount__c.field-meta.xml
<CustomField>
    <fullName>cancelledAmount__c</fullName>
    <label>Montant annulé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>