force-app/main/default/objects/AccountingPiece__c/fields/cancelledPiece__c.field-meta.xml
<CustomField>
    <fullName>cancelledPiece__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce annulée</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountingPiece__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Receipt</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountingPiece__c</referenceTo>
    <relationshipLabel>Pièces comptables (Pièce annulée)</relationshipLabel>
    <relationshipName>CancelledAccountingPieces</relationshipName>
    <type>Lookup</type>
</CustomField>