force-app/main/default/objects/AccountingPiece__c/fields/cancelledQuantity__c.field-meta.xml
<CustomField>
    <fullName>cancelledQuantity__c</fullName>
    <label>[#] Quantité annulée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>