force-app/main/default/objects/AccountingPiece__c/fields/closingDate__c.field-meta.xml
<CustomField>
    <fullName>closingDate__c</fullName>
    <label>Date de clôture</label>
    <type>Date</type>
</CustomField>