force-app/main/default/objects/AccountingPiece__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <description>Devis du montatn de la pièce</description>
    <label>Devise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>FRF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>