force-app/main/default/objects/AccountingPiece__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <formula>IF (RecordType.DeveloperName = &apos;CompositeReceipt&apos;,
    &apos;&apos;,
    IF (ISBLANK(order__c) || ISPICKVAL(order__r.Type, &apos;Commande SAV&apos;),
        &apos;SAV&apos;,
        &apos;Commande&apos;
    )
)</formula>
    <label>Répartition</label>
    <type>Text</type>
</CustomField>