force-app/main/default/objects/AccountingPiece__c/fields/dueDate__c.field-meta.xml
<CustomField>
    <fullName>dueDate__c</fullName>
    <label>Date d’échéance</label>
    <type>Date</type>
</CustomField>