force-app/main/default/objects/AccountingPiece__c/fields/entityBankAccount__c.field-meta.xml
<CustomField>
    <fullName>entityBankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte bancaire (Entité)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BankAccount</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Pièces comptables</relationshipLabel>
    <relationshipName>AccountingPieces_BankAccount</relationshipName>
    <type>Lookup</type>
</CustomField>