force-app/main/default/objects/AccountingPiece__c/fields/euroAmount__c.field-meta.xml
<CustomField>
    <fullName>euroAmount__c</fullName>
    <description>Montant converti en euro</description>
    <formula>IF(
AND(NOT(ISBLANK(accountingDate__c)), accountingDate__c &lt; DATE(2002,01,01),NOT(ISBLANK(amount__c))),
amount__c / 6.55957,
amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>