force-app/main/default/objects/AccountingPiece__c/fields/externalBank__c.field-meta.xml
<CustomField>
    <fullName>externalBank__c</fullName>
    <label>Banque externe (Compte)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>