force-app/main/default/objects/AccountingPiece__c/fields/externalReference__c.field-meta.xml
<CustomField>
    <fullName>externalReference__c</fullName>
    <label>Référence externe (Compte)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>