force-app/main/default/objects/AccountingPiece__c/fields/inputEntity__c.field-meta.xml
<CustomField>
    <fullName>inputEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entité de saisie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pièces comptables (Saisie)</relationshipLabel>
    <relationshipName>AccountingPieces_Input</relationshipName>
    <type>Lookup</type>
</CustomField>