force-app/main/default/objects/AccountingPiece__c/fields/invoice__c.field-meta.xml
<CustomField>
    <fullName>invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Invoice__c.invoiceReference__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Invoice__c.customerOrder__c</field>
            <operation>equals</operation>
            <valueField>$Source.order__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Pièces comptables</relationshipLabel>
    <relationshipName>AccountingPieces</relationshipName>
    <type>Lookup</type>
</CustomField>