force-app/main/default/objects/AccountingPiece__c/fields/isAccountingPieceLocked__c.field-meta.xml
<CustomField>
    <fullName>isAccountingPieceLocked__c</fullName>
    <formula>OR(
				(NOT(ISNULL(accountingDate__c)) &amp;&amp; ADDMONTHS(accountingDate__c, 48) &gt; TODAY()),
    (NOT(ISNULL(parent__c)) &amp;&amp; NOT(ISNULL(parent__r.accountingDate__c)) &amp;&amp; ADDMONTHS(parent__r.accountingDate__c, 48) &gt; TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Pièce comptable verrouillée</label>
    <type>Checkbox</type>
</CustomField>