force-app/main/default/objects/AccountingPiece__c/fields/isInApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>isInApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processus d&apos;approbation en cours</label>
    <type>Checkbox</type>
</CustomField>