force-app/main/default/objects/AccountingPiece__c/fields/isInvalid__c.field-meta.xml
<CustomField>
    <fullName>isInvalid__c</fullName>
    <formula>accountingDate__c !=  accountingEntry__r.entryDate__c</formula>
    <label>[#] Invalide comptablement</label>
    <type>Checkbox</type>
</CustomField>