force-app/main/default/objects/AccountingPiece__c/fields/isPositiveCheckRequest__c.field-meta.xml
<CustomField>
    <fullName>isPositiveCheckRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[#] Demande de chèque positive</label>
    <type>Checkbox</type>
</CustomField>