force-app/main/default/objects/AccountingPiece__c/fields/isRefused__c.field-meta.xml
<CustomField>
    <fullName>isRefused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est refusée</label>
    <type>Checkbox</type>
</CustomField>