force-app/main/default/objects/AccountingPiece__c/fields/lineAmount__c.field-meta.xml
<CustomField>
    <fullName>lineAmount__c</fullName>
    <label>Montant des lignes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>