force-app/main/default/objects/AccountingPiece__c/fields/lineQuantity__c.field-meta.xml
<CustomField>
    <fullName>lineQuantity__c</fullName>
    <label>[#] Quantité des lignes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>