force-app/main/default/objects/AccountingPiece__c/fields/miscellaneousOperationType__c.field-meta.xml
<CustomField>
    <fullName>miscellaneousOperationType__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
     &quot;ReceiptCancellation&quot;,    &quot;1 - AN&quot;,
     &quot;Refund&quot;,                 &quot;2 - RS&quot;,
     &quot;MiscellaneousOperation&quot;, &quot;3 - OD&quot;,
     &quot;Agios&quot;,                  &quot;4 - AC&quot;,
     &quot;PaymentDifference&quot;,      &quot;5 - DR&quot;,
     &quot;VATDifference&quot;,          &quot;6 - EC&quot;,
     &quot;DoubtfulDebt&quot;,           &quot;7 - CD&quot;,
     &quot;ProfitsAndLosses&quot;,       &quot;8 - PP&quot;,
     RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Opération Diverse</label>
    <type>Text</type>
</CustomField>