force-app/main/default/objects/AccountingPiece__c/fields/netAmount__c.field-meta.xml
<CustomField>
    <fullName>netAmount__c</fullName>
    <formula>amount__c + cancelledAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>