force-app/main/default/objects/AccountingPiece__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CustomerOrder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pièces comptables</relationshipLabel>
    <relationshipName>AccountingPieces</relationshipName>
    <type>Lookup</type>
</CustomField>