force-app/main/default/objects/AccountingPiece__c/fields/overpaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>overpaymentAmount__c</fullName>
    <description>Receit = Max(0, montant de la pièce - montant TTC à percevoir de la facture si renseignée sinon montant TTC de la commande

CompositeReceipt = montant de la pièce - somme(sous-pièce:montant)</description>
    <formula>IF(
    RecordType.DeveloperName == &apos;Receipt&apos;, 
				MAX(0, amount__c - IF(ISBLANK(invoice__c), order__r.amount__c, invoice__r.toPerceiveAmount__c)),
				IF(
								RecordType.DeveloperName == &apos;CompositeReceipt&apos;,
								amount__c - lineAmount__c,
								null
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant trop perçu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>