force-app/main/default/objects/AccountingPiece__c/fields/parent__c.field-meta.xml
<CustomField>
    <fullName>parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pièce parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountingPiece__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CompositeReceipt</value>
        </filterItems>
        <filterItems>
            <field>AccountingPiece__c.parent__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AccountingPiece__c</referenceTo>
    <relationshipLabel>Pièces comptables</relationshipLabel>
    <relationshipName>AccountingPieces</relationshipName>
    <type>Lookup</type>
</CustomField>