force-app/main/default/objects/AccountingPiece__c/fields/paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>paymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode de règlement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PaymentMethod</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Pièces comptables (Mode de règlement)</relationshipLabel>
    <relationshipName>AccountingPieces_PaymentMethod</relationshipName>
    <type>Lookup</type>
</CustomField>