force-app/main/default/objects/AccountingPiece__c/fields/pieceDate__c.field-meta.xml
<CustomField>
    <fullName>pieceDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de la pièce</label>
    <type>Date</type>
</CustomField>