force-app/main/default/objects/AccountingPiece__c/fields/refundReason__c.field-meta.xml
<CustomField>
    <fullName>refundReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motif de remboursement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>RefundReason</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Pièces comptables (Motif de remboursement)</relationshipLabel>
    <relationshipName>AccountingPieces_Refund</relationshipName>
    <type>Lookup</type>
</CustomField>