force-app/main/default/objects/AccountingPiece__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&apos;En cours&apos;</defaultValue>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Comptabilisé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;approbation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>