force-app/main/default/objects/AccountingPiece__c/fields/TMP_invoiceAmountError__c.field-meta.xml
<CustomField>
    <fullName>TMP_invoiceAmountError__c</fullName>
    <formula>((amount__c + invoice__r.perceivedAmount__c) &gt; invoice__r.toPerceiveAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Erreur montant facture</label>
    <type>Checkbox</type>
</CustomField>