force-app/main/default/objects/AccountingPiece__c/fields/undueAdvancePayment__c.field-meta.xml
<CustomField>
    <fullName>undueAdvancePayment__c</fullName>
    <formula>IF (RecordType.DeveloperName = &apos;Receipt&apos; &amp;&amp; !ISBLANK(invoice__c),
    accountingDate__c &lt; invoice__r.invoiceDate__c,
    FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Acompte indu</label>
    <type>Checkbox</type>
</CustomField>