force-app/main/default/objects/AccountingPiece__c/recordTypes/Agios.recordType-meta.xml
<RecordType>
    <fullName>Agios</fullName>
    <active>true</active>
    <label>Agios crédit</label>
</RecordType>