force-app/main/default/objects/AccountingPiece__c/recordTypes/CheckRequest.recordType-meta.xml
<RecordType>
    <fullName>CheckRequest</fullName>
    <active>true</active>
    <label>Demande de chèque spécifique</label>
</RecordType>