force-app/main/default/objects/AccountingPiece__c/recordTypes/CompositeReceipt.recordType-meta.xml
<RecordType>
    <fullName>CompositeReceipt</fullName>
    <active>true</active>
    <label>Encaissement composite</label>
</RecordType>