force-app/main/default/objects/AccountingPiece__c/recordTypes/DoubtfulDebt.recordType-meta.xml
<RecordType>
    <fullName>DoubtfulDebt</fullName>
    <active>true</active>
    <label>Créance douteuse</label>
</RecordType>