force-app/main/default/objects/AccountingPiece__c/recordTypes/MiscellaneousOperation.recordType-meta.xml
<RecordType>
    <fullName>MiscellaneousOperation</fullName>
    <active>true</active>
    <label>Opération diverse</label>
</RecordType>