force-app/main/default/objects/AccountingPiece__c/recordTypes/PaymentDifference.recordType-meta.xml
<RecordType>
    <fullName>PaymentDifference</fullName>
    <active>true</active>
    <label>Différence de règlement</label>
</RecordType>