force-app/main/default/objects/AccountingPiece__c/recordTypes/ProfitsAndLosses.recordType-meta.xml
<RecordType>
    <fullName>ProfitsAndLosses</fullName>
    <active>true</active>
    <label>Pertes et profits</label>
</RecordType>