force-app/main/default/objects/AccountingPiece__c/recordTypes/Receipt.recordType-meta.xml
<RecordType>
    <fullName>Receipt</fullName>
    <active>true</active>
    <label>Encaissement</label>
</RecordType>