force-app/main/default/objects/AccountingPiece__c/recordTypes/ReceiptCancellation.recordType-meta.xml
<RecordType>
    <fullName>ReceiptCancellation</fullName>
    <active>true</active>
    <label>Annulation encaissement remis</label>
</RecordType>