force-app/main/default/objects/AccountingPiece__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <label>Remboursement siège</label>
</RecordType>