force-app/main/default/objects/AccountingPiece__c/recordTypes/UndeliveredReceiptCancellation.recordType-meta.xml
<RecordType>
    <fullName>UndeliveredReceiptCancellation</fullName>
    <active>true</active>
    <label>Annulation encaissement non remis</label>
</RecordType>