force-app/main/default/objects/AccountingPiece__c/recordTypes/Unpaid.recordType-meta.xml
<RecordType>
    <fullName>Unpaid</fullName>
    <active>true</active>
    <label>Impayé bancaire</label>
</RecordType>