force-app/main/default/objects/AccountingPiece__c/recordTypes/VATDifference.recordType-meta.xml
<RecordType>
    <fullName>VATDifference</fullName>
    <active>true</active>
    <label>Ecart de conversion</label>
</RecordType>