force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_AgiosAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_AgiosAmount</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;Agios&apos; &amp;&amp;
isLegacy__c == false &amp;&amp;
amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>Montant invalide (doit être strictement supérieur à 0)!</errorMessage>
</ValidationRule>