force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CancelAmountPLF2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CancelAmountPLF2</fullName>
    <active>true</active>
    <description>Lors de la création d&apos;une annulation d&apos;encaissement (remis ou non remis), vérifier que le montant de la nouvelle annulation ajouté au montant déjà annulé de l&apos;encaissement ne dépasse pas le montant total de l&apos;encaissement</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp; 
NOT(ISNULL(cancelledPiece__c)) &amp;&amp;
RecordType.DeveloperName = &apos;UndeliveredReceiptCancellation&apos; &amp;&amp;
ABS(amount__c + cancelledPiece__r.cancelledAmount__c) &gt; cancelledPiece__r.amount__c</errorConditionFormula>
    <errorMessage>Montant cumulé des annulations supérieur au montant de l&apos;encaissement !</errorMessage>
</ValidationRule>