force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CancellationAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CancellationAmount</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(RecordType.DeveloperName = &apos;ReceiptCancellation&apos; ||
 RecordType.DeveloperName = &apos;UndeliveredReceiptCancellation&apos; ||
 RecordType.DeveloperName = &apos;Unpaid&apos;) &amp;&amp;
isLegacy__c == false &amp;&amp;
( 
				amount__c &gt;= 0 ||
				ROUND(amount__c,2) &gt; ROUND(cancelledPiece__r.amount__c,2)
)</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>Montant invalide (doit être strictement inférieur à 0 et ne pas dépasser le montant de la pièce à annuler)!</errorMessage>
</ValidationRule>