force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CancelledPiece.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CancelledPiece</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
(
				RecordType.DeveloperName = &apos;ReceiptCancellation&apos; ||
				RecordType.DeveloperName = &apos;UndeliveredReceiptCancellation&apos; ||
				RecordType.DeveloperName = &apos;Unpaid&apos;
) &amp;&amp;
ISBLANK(cancelledPiece__c)</errorConditionFormula>
    <errorDisplayField>cancelledPiece__c</errorDisplayField>
    <errorMessage>Pièce annulée obligatoire!</errorMessage>
</ValidationRule>