force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CannotEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CannotEdit</fullName>
    <active>false</active>
    <description>Modification interdite si le statut est égal à Comptabilisé ou Annulé</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				ISPICKVAL(status__c, &quot;Comptabilisé&quot;) ||
				ISPICKVAL(status__c, &quot;Annulé&quot;)
) &amp;&amp;
(
				ISPICKVAL(PRIORVALUE(status__c), &quot;Comptabilisé&quot;) ||
				ISPICKVAL(PRIORVALUE(status__c), &quot;Annulé&quot;)
) &amp;&amp;
(
    ISCHANGED( creditMemo__c ) ||  
    ISCHANGED( externalBank__c ) ||    
    ISCHANGED( order__c ) ||  
    ISCHANGED( comments__c ) ||  
    ISCHANGED( account__c ) ||  
    ISCHANGED( entityBankAccount__c ) ||  
    ISCHANGED( accountingDate__c ) ||  
    ISCHANGED( pieceDate__c ) ||  
    ISCHANGED( dueDate__c ) ||  
    ISCHANGED( accountingEntry__c ) ||  
    ISCHANGED( orderEntity__c ) ||    
    ISCHANGED( inputEntity__c ) ||  
    ISCHANGED( invoice__c ) ||  
    ISCHANGED( paymentMethod__c ) ||  
    ISCHANGED( amount__c ) ||  
    ISCHANGED( refundReason__c ) ||    
    ISCHANGED( cancelledPiece__c ) ||  
    ISCHANGED( parent__c ) ||  
    ISCHANGED( externalReference__c )
)</errorConditionFormula>
    <errorMessage>Modification interdite si le statut est égal à Comptabilisé ou Annulé!</errorMessage>
</ValidationRule>