force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CantUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CantUpdate</fullName>
    <active>false</active>
    <description>Impossible de modifier ce(s) champ(s) si la pièce comptable a une une date de comptabilité renseignée.</description>
    <errorConditionFormula>$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK(accountingDate__c)) &amp;&amp;
NOT(ISBLANK(PRIORVALUE(accountingDate__c))) &amp;&amp;
(
ISCHANGED(entityBankAccount__c) ||
ISCHANGED(accountingDate__c) ||
ISCHANGED(pieceDate__c) ||
ISCHANGED(orderEntity__c) ||
ISCHANGED(inputEntity__c) ||
ISCHANGED(invoice__c) ||
ISCHANGED(paymentMethod__c) ||
ISCHANGED(amount__c) ||
ISCHANGED(refundReason__c) ||
ISCHANGED(cancelledPiece__c) ||
ISCHANGED(parent__c) ||
ISCHANGED(externalReference__c) ||
ISCHANGED(RecordTypeId)
)</errorConditionFormula>
    <errorMessage>Impossible de modifier ce(s) champ(s) si la pièce comptable a une une date de comptabilité renseignée.</errorMessage>
</ValidationRule>