force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CompositeRecLines.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CompositeRecLines</fullName>
    <active>true</active>
    <description>Un encaissement composite doit avoir un montant global supérieur à la somme des encaissements enfants</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;CompositeReceipt&apos; &amp;&amp;
isLegacy__c == false &amp;&amp;
amount__c &lt; lineAmount__c</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>Montant invalide (doit être supérieur à la somme des encaissements enfants)!</errorMessage>
</ValidationRule>