force-app/main/default/objects/AccountingPiece__c/validationRules/VR_K3_AccountingPiece_CreditMemo.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingPiece_CreditMemo</fullName>
    <active>true</active>
    <description>Si un avoir est renseigné alors le type de la pièce comptable est CheckRequest ou Refund. Pour les autres types d&apos;enregistrement, il faut générer une erreur.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
NOT((
				RecordType.DeveloperName == &apos;CheckRequest&apos; ||
    RecordType.DeveloperName == &apos;Refund&apos; 
)) &amp;&amp;
NOT(ISBLANK( creditMemo__c ))</errorConditionFormula>
    <errorDisplayField>creditMemo__c</errorDisplayField>
    <errorMessage>Avoir invalide (Valide seulement pour des demandes de chèque spécifique	ou remboursement siège)!</errorMessage>
</ValidationRule>